development of first version of landing page

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
+APP_NAME= IMA
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pPY2X7MJrw2M6UgqIi+cNGSJoWLLcSlnU4+On5l+IJI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=fr
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -21,6 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
